update webpack and babel config
Signed-off-by: Anshuman Chhapolia <achhap.10.01@gmail.com>

--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -4,7 +4,7 @@
     <title>Smoke -h</title>
 </head>
 <body>
-<div id="root"><%= reactApp %></div>
+<div id="root"><%- reactApp %></div>
 <script src="/index.js" charset="utf-8"></script>
 <script src="/vendor.js" charset="utf-8"></script>
 </body>
